added content for pages

--- a/Lesson-06/weather/sodasprings.html
+++ b/Lesson-06/weather/sodasprings.html
@@ -60,49 +60,46 @@
                     <h3><span id="dayName1"></span></h3>
                     <img id="icon1" src="#" alt="icon1" width="50">
                     <p>Humidity: <span id="humidity1"></span>%</p>
-                    <p>Temp: <span id="1"></span> °F</p>
+                    <p>Temp: <span id="1"></span>°F</p>
                 </div>  
                 <div class="day2">
                     <h3><span id="dayName2"></span></h3>
                     <img id="icon2" src="#"  alt="icon2" width="50">
                     <p>Humidity: <span id="humidity2"></span>%</p>
-                    <p>Temp: <span id="2"></span> °F</p>
+                    <p>Temp: <span id="2"></span>°F</p>
                 </div>  
                 <div class="day3">
                     <h3><span id="dayName3"></span></h3>
                     <img id="icon3" src="#"  alt="icon3" width="50">
                     <p>Humidity: <span id="humidity3"></span>%</p>
-                    <p>Temp: <span id="3"></span> °F</p>
+                    <p>Temp: <span id="3"></span>°F</p>
                 </div>  
                 <div class="day4">
                     <h3><span id="dayName4"></span></h3>
                     <img id="icon4" src="#" alt="icon4" width="50">
                     <p>Humidity: <span id="humidity4"></span>%</p>
-                    <p>Temp: <span id="4"></span> °F</p>
+                    <p>Temp: <span id="4"></span>°F</p>
                 </div>      
                 <div class="day5">
                     <h3><span id="dayName5"></span></h3>
                     <img id="icon5" src="#" alt="icon5" width="50">
                     <p>Humidity: <span id="humidity5"></span>%</p>
-                    <p>Temp: <span id="5"></span> °F</p>
+                    <p>Temp: <span id="5"></span>°F</p>
                     </div>                 
             </div>
             <div class="calendar">
-                <h2>Community Calendar</h2>
-                <img src="../weather/images/calendar.jpeg" width="400" alt="calendar image">
-                <h3>Tuesdays</h3>
-                <p>Story Time: 11 a.m., Franklin City Building</p>
-                <h3>Wednesdays</h3>
-                <p>Knit Wits: 11 a.m., Presbyterian Church, 206 East 200 North, Preston</p>
-                <p>Special Friends Club, 12:45 p.m., for all adults who have special needs, directed by library staff member Diane Steadman.</p>
-                <p>Every week has a different theme with books and STEM activities along with sensory and learning materials.</p>
-                <p>MGM Club: 4 p.m., Larsen-Sant Library</p>
-                <h3>Thursdays</h3>
-                <p>Story Time, 11 a.m., and 2 p.m., Larsen-Sant Library
-                <p>Adult Institute last class, 7 p.m., 2 Samuel 1-12/2 Samuel 13-24</p>
-                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p> 
+                <img src="../weather/images/sodaspringsnews.jpeg" width="400" alt="calendar image">
+                <h2>New Open-Pit Phosphate Mines Approved In Eastern Idaho</h2>
+                <p>ODA SPRINGS, Idaho (AP) — Federal officials have approved two open-pit phosphate mines in eastern Idaho that include environmental</p>
+                <p>S protections intended to prevent the type of pollution caused by past phosphate mining in the area.</p>
+                <p>The U.S. Bureau of Land Management said Thursday it approved the Caldwell Canyon Mine project in Caribou County </p>
+                <p>about 13 miles (21 kilometers) northeast of Soda Springs.</p>
+                <p> subsidiary P4 Production will develop the mines on three phosphate leases. Bayer acquired agricultural giant Monsanto, </p>
+                <p>which previously mined the area, for $63 billion last year.</p>
+                <p>But the area also contains Superfund sites because of pollution from past phosphate mining.</p>
+                
                 <section id="events">
-                    <h4>Preston Upcoming Events</h4>
+                    <h4>Soda Springs Upcoming Events</h4>
                     <p><span id="event1"></span></p>
                     <p><span id="event2"></span></p>
                     <p><span id="event3"></span></p>    
