--- a/Lesson-06/weather/fishhaven.html
+++ b/Lesson-06/weather/fishhaven.html
@@ -60,49 +60,46 @@
                     <h3><span id="dayName1"></span></h3>
                     <img id="icon1" src="#" alt="icon1" width="50">
                     <p>Humidity: <span id="humidity1"></span>%</p>
-                    <p>Temp: <span id="1"></span> °F</p>
+                    <p>Temp: <span id="1"></span>°F</p>
                 </div>  
                 <div class="day2">
                     <h3><span id="dayName2"></span></h3>
                     <img id="icon2" src="#"  alt="icon2" width="50">
                     <p>Humidity: <span id="humidity2"></span>%</p>
-                    <p>Temp: <span id="2"></span> °F</p>
+                    <p>Temp: <span id="2"></span>°F</p>
                 </div>  
                 <div class="day3">
                     <h3><span id="dayName3"></span></h3>
                     <img id="icon3" src="#"  alt="icon3" width="50">
                     <p>Humidity: <span id="humidity3"></span>%</p>
-                    <p>Temp: <span id="3"></span> °F</p>
+                    <p>Temp: <span id="3"></span>°F</p>
                 </div>  
                 <div class="day4">
                     <h3><span id="dayName4"></span></h3>
                     <img id="icon4" src="#" alt="icon4" width="50">
                     <p>Humidity: <span id="humidity4"></span>%</p>
-                    <p>Temp: <span id="4"></span> °F</p>
+                    <p>Temp: <span id="4"></span>°F</p>
                 </div>      
                 <div class="day5">
                     <h3><span id="dayName5"></span></h3>
                     <img id="icon5" src="#" alt="icon5" width="50">
                     <p>Humidity: <span id="humidity5"></span>%</p>
-                    <p>Temp: <span id="5"></span> °F</p>
+                    <p>Temp: <span id="5"></span>°F</p>
                     </div>                 
             </div>
             <div class="calendar">
-                <h2>Community Calendar</h2>
-                <img src="../weather/images/calendar.jpeg" width="400" alt="calendar image">
-                <h3>Tuesdays</h3>
-                <p>Story Time: 11 a.m., Franklin City Building</p>
-                <h3>Wednesdays</h3>
-                <p>Knit Wits: 11 a.m., Presbyterian Church, 206 East 200 North, Preston</p>
-                <p>Special Friends Club, 12:45 p.m., for all adults who have special needs, directed by library staff member Diane Steadman.</p>
-                <p>Every week has a different theme with books and STEM activities along with sensory and learning materials.</p>
-                <p>MGM Club: 4 p.m., Larsen-Sant Library</p>
-                <h3>Thursdays</h3>
-                <p>Story Time, 11 a.m., and 2 p.m., Larsen-Sant Library
-                <p>Adult Institute last class, 7 p.m., 2 Samuel 1-12/2 Samuel 13-24</p>
-                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>    
+                <h2>New Restaurant Opening - The Charter Oak and Mélisse </h2>
+                <img src="../weather/images/restaurant.jpeg" width="400" alt="calendar image">
+                <p> like The Restaurant at Meadowood, The Charter Oak and Mélisse, but opted for a more playful approach 
+                at their Arts District spot, which seamlessly blends Korean flavors, regional ingredients, 
+                and elements of New York of deli culture. The Hongs have transformed the 5,000-square foot space that
+                 formerly housed the restaurant Bon Temps into a bright and vibrant dining room that’s centered around 
+                 an expansive deli case chock full of eclectic, flavorful fare. Order your meal, then head up to the
+                  second floor where there’s a supermarket carrying all sorts of bespoke trinkets, pantry staples, snacks
+                 and streetwear. Yangban is a blend of Korean and Jewish deli classics with a California twist, this is 
+                 fusion fare done right; i’s only surprising someone didn’t think of blending banchan and salatim before.</p>    
                 <section id="events">
-                    <h4>Preston Upcoming Events</h4>
+                    <h4>Fish Haven Upcoming Events</h4>
                     <p><span id="event1"></span></p>
                     <p><span id="event2"></span></p>
                     <p><span id="event3"></span></p>    
