--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -8,7 +8,7 @@
         <title>SCOOTS Home</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="#" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&family=Tiro+Kannada&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="scoots-s.css" />
         <link rel="stylesheet" href="scoots-m.css" />
         <link rel="stylesheet" href="scoots-l.css" />
