added responsive images for rentals

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -42,9 +42,8 @@
             <div class="rentals-div">
                 <div id="option1">
                     <picture class="rental-img">
-                        <source id="honda-medium" srcset="#" media="(min-width: 401px) and (max-width: 899px)" alt="honda-medium">
-                            <source id="honda-large" srcset="#" media="(min-width: 900px)" alt="honda-large">
-                        <img id="honda-small"  src="#" alt="honda-small">
+                            <source id="scooter-large" srcset="images/scooter400.jpeg" media="(min-width: 400px)" alt="honda-large">
+                        <img id="scooter-small"  src="images/scooter.png" alt="honda-small">
                     </picture>
                     <section class="rental-info">
                         <h2>Honda Motor Scooters</h2>
@@ -55,9 +54,8 @@
                 </div>
                 <div id="option2">
                     <picture class="rental-img">
-                        <source id="atv-medium" srcset="#" media="(min-width: 401px) and (max-width: 899px)" alt="atv-medium">
-                            <source id="atv-large" srcset="#" media="(min-width: 900px)" alt="atv-large">
-                        <img id="atv-small"  src="#" alt="atv-small">
+                            <source id="atv-large" srcset="images/atv400.jpeg" media="(min-width: 400px)" alt="atv-large">
+                        <img id="atv-small"  src="images/quad.png" alt="atv-small">
                     </picture>
                     <section class="rental-info">
                         <h2>ATV Side-by-Side</h2>
@@ -66,9 +64,8 @@
                 </div>
                 <div id="option3">
                     <picture class="rental-img">
-                        <source id="jeep-medium" srcset="#" media="(min-width: 401px) and (max-width: 899px)" alt="jeep-medium">
-                            <source id="jeep-large" srcset="#" media="(min-width: 900px)" alt="jeep-large">
-                        <img id="jeep-small"  src="#" alt="jeep-small">
+                            <source id="jeep-large" srcset="images/jeep400.jpeg" media="(min-width: 400px)" alt="jeep-large">
+                        <img id="jeep-small"  src="images/jeep.png" alt="jeep-small">
                     </picture>
                     <section class="rental-info">
                         <h2>Jeep Rentals</h2>
