added css to weather

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -85,8 +85,8 @@
                 </div> -->
             </div>
             </div>
+            <h2 class="weather-heading">Weather in Cozumel</h2>
             <div class="weather-div">
-                <h2 class="weather-heading">Weather in Cozumel</h2>
                 <div id="current-weather-div">
                     <h3>Current Weather</span></h3>
                     <img id="c-icon" src="#" alt="c-icon" width="50">
@@ -94,6 +94,7 @@
                     <p>Humidity: <span id="c-humidity"></span>%</p>
                     <p>Temp: <span id="c-temp"></span>°F</p>
                 </div>
+                <div id="forecast">
                 <div class="day1">
                     <h3><span id="dayName1"></span></h3>
                     <img id="icon1" src="#" alt="icon1" width="50">
@@ -123,7 +124,8 @@
                     <img id="icon5" src="#" alt="icon5" width="50">
                     <p>Humidity: <span id="humidity5"></span>%</p>
                     <p>Temp: <span id="temp5"></span>°F</p>
-                    </div>     
+                    </div>    
+                </div> 
             </div>
         </main>
         <footer>
