added a page for each part

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="SCOOTS by Diana Urbina Guerra"/>
+        <meta name="description" content="SCOOTS Homepage by Diana Urbina Guerra"/>
         <meta name="author" content="Diana Urbina Guerra" />
         <title>SCOOTS Home</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,10 +31,10 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li class="active"><a href="scoots.html">HOME</a></li>
-                <li><a href="#">RENTALS</a></li>
-                <li><a href="#">RESERVATIONS</a></li>
-                <li><a href="#">TOURS</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="rentals.html">RENTALS</a></li>
+                <li><a href="reservations.html">RESERVATIONS</a></li>
+                <li><a href="tours.html">TOURS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
         <main>
