added first table for honda scooter prices

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -39,6 +39,57 @@
         </nav>
         <main>
             <h2 class="title">RENTALS</h2>
+            <h3>HONDA SCOOTER</h3>
+            <div>
+                <div id="option1">
+                <picture id="img1">
+                    <img src="r-scooter" width="200" alt="scooter">
+                </picture>
+                </div>
+                <div id="info"></div>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th>RESERVATION</th>
+                        <th>WALK-IN</th>
+                    </tr>
+                    <tr>
+                    <th>RENTAL TYPE</th>
+                    <th>MAX. PERSONS</th>
+                    <th>HALF DAY (3 HRS)</th>
+                    <th>FULL DAY</th>
+                    <th>HALF DAY (3 HRS)</th>
+                    <th>FULL DAY</th>
+                    </tr>
+                    <tr>
+                        <td id="scooter1">a</td>
+                        <td id="max1">a</td>
+                        <td id="r-half-price1">a</td>
+                        <td id="r-full-price1">a</td>
+                        <td id="w-half-price1">a</td>
+                        <td id="w-full-price1">a</td>
+                    </tr>
+                    <tr>
+                        <td id="scooter2">b</td>
+                        <td id="max2">b</td>
+                        <td id="r-half-price2">b</td>
+                        <td id="r-half-price2">b</td>
+                        <td id="w-half-price2">b</td>
+                        <td id="w-full-price2">b</td>
+                    </tr>
+                    <tr>
+                        <td id="scooter3"></td>
+                        <td id="max3"></td>
+                        <td id="r-half-price3"></td>
+                        <td id="r-half-price3"></td>
+                        <td id="w-half-price3"></td>
+                        <td id="w-full-price3"></td>
+                    </tr>
+                </table>
+            </div>
         </main>
         <footer>
             <p>
