added table for atv

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -66,27 +66,62 @@
                     </tr>
                     <tr>
                         <td id="scooter1">a</td>
-                        <td id="max1">a</td>
-                        <td id="r-half-price1">a</td>
-                        <td id="r-full-price1">a</td>
-                        <td id="w-half-price1">a</td>
-                        <td id="w-full-price1">a</td>
+                        <td id="smax1">a</td>
+                        <td id="sr-half-price1">a</td>
+                        <td id="sr-full-price1">a</td>
+                        <td id="sw-half-price1">a</td>
+                        <td id="sw-full-price1">a</td>
                     </tr>
                     <tr>
                         <td id="scooter2">b</td>
-                        <td id="max2">b</td>
-                        <td id="r-half-price2">b</td>
-                        <td id="r-half-price2">b</td>
-                        <td id="w-half-price2">b</td>
-                        <td id="w-full-price2">b</td>
+                        <td id="smax2">b</td>
+                        <td id="sr-half-price2">b</td>
+                        <td id="sr-half-price2">b</td>
+                        <td id="sw-half-price2">b</td>
+                        <td id="sw-full-price2">b</td>
                     </tr>
                     <tr>
                         <td id="scooter3"></td>
-                        <td id="max3"></td>
-                        <td id="r-half-price3"></td>
-                        <td id="r-half-price3"></td>
-                        <td id="w-half-price3"></td>
-                        <td id="w-full-price3"></td>
+                        <td id="smax3"></td>
+                        <td id="sr-half-price3"></td>
+                        <td id="sr-half-price3"></td>
+                        <td id="sw-half-price3"></td>
+                        <td id="sw-full-price3"></td>
+                    </tr>
+                </table>
+            </div>
+            <h3>HONDA PIONEER ATV</h3>
+            <div>
+                <div id="option2">
+                <picture id="img2">
+                    <img src="#" width="200" alt="ATV">
+                </picture>
+                </div>
+                <div id="info2"></div>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th>RESERVATION</th>
+                        <th>WALK-IN</th>
+                    </tr>
+                    <tr>
+                    <th>RENTAL TYPE</th>
+                    <th>MAX. PERSONS</th>
+                    <th>HALF DAY (3 HRS)</th>
+                    <th>FULL DAY</th>
+                    <th>HALF DAY (3 HRS)</th>
+                    <th>FULL DAY</th>
+                    </tr>
+                    <tr>
+                        <td id="atv">a</td>
+                        <td id="amax1">a</td>
+                        <td id="ar-half-price1">a</td>
+                        <td id="ar-full-price1">a</td>
+                        <td id="aw-half-price1">a</td>
+                        <td id="aw-full-price1">a</td>
                     </tr>
                 </table>
             </div>
