added jeep table for prices

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -116,12 +116,55 @@
                     <th>FULL DAY</th>
                     </tr>
                     <tr>
-                        <td id="atv">a</td>
-                        <td id="amax1">a</td>
-                        <td id="ar-half-price1">a</td>
-                        <td id="ar-full-price1">a</td>
-                        <td id="aw-half-price1">a</td>
-                        <td id="aw-full-price1">a</td>
+                        <td id="atv"></td>
+                        <td id="amax1"></td>
+                        <td id="ar-half-price1"></td>
+                        <td id="ar-full-price1"></td>
+                        <td id="aw-half-price1"></td>
+                        <td id="aw-full-price1"></td>
+                    </tr>
+                </table>
+            </div>
+            <h3>JEEP</h3>
+            <div>
+                <div id="option3">
+                <picture id="img3">
+                    <img src="#" width="200" alt="jeep">
+                </picture>
+                </div>
+                <div id="info"></div>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th>RESERVATION</th>
+                        <th>WALK-IN</th>
+                    </tr>
+                    <tr>
+                    <th>RENTAL TYPE</th>
+                    <th>MAX. PERSONS</th>
+                    <th>HALF DAY (3 HRS)</th>
+                    <th>FULL DAY</th>
+                    <th>HALF DAY (3 HRS)</th>
+                    <th>FULL DAY</th>
+                    </tr>
+                    <tr>
+                        <td id="jeep1"></td>
+                        <td id="jmax1"></td>
+                        <td id="jr-half-price1"></td>
+                        <td id="jr-full-price1"></td>
+                        <td id="jw-half-price1"></td>
+                        <td id="jw-full-price1"></td>
+                    </tr>
+                    <tr>
+                        <td id="jeep2"></td>
+                        <td id="jmax2"></td>
+                        <td id="jr-half-price2"></td>
+                        <td id="jr-half-price2"></td>
+                        <td id="jw-half-price2"></td>
+                        <td id="jw-full-price2"></td>
                     </tr>
                 </table>
             </div>
