added json data to html

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -43,18 +43,14 @@
             <div>
                 <div id="option1">
                 <picture id="img1">
-                    <img src="r-scooter" width="200" alt="scooter">
+                    <img src="images/r-scooter" width="200" alt="scooter">
                 </picture>
                 </div>
                 <div id="info"></div>
                 <table>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th>RESERVATION</th>
-                        <th>WALK-IN</th>
+                    <tr class="top">
+                        <th colspan="4">RESERVATION</th>
+                        <th colspan="2">WALK-IN</th>
                     </tr>
                     <tr>
                     <th>RENTAL TYPE</th>
@@ -67,7 +63,7 @@
                     <tr>
                         <td id="scooter1">a</td>
                         <td id="smax1">a</td>
-                        <td id="sr-half-price1">a</td>
+                        <td id="sr-half-price1"></td>
                         <td id="sr-full-price1">a</td>
                         <td id="sw-half-price1">a</td>
                         <td id="sw-full-price1">a</td>
@@ -76,7 +72,7 @@
                         <td id="scooter2">b</td>
                         <td id="smax2">b</td>
                         <td id="sr-half-price2">b</td>
-                        <td id="sr-half-price2">b</td>
+                        <td id="sr-full-price2">b</td>
                         <td id="sw-half-price2">b</td>
                         <td id="sw-full-price2">b</td>
                     </tr>
@@ -84,7 +80,7 @@
                         <td id="scooter3"></td>
                         <td id="smax3"></td>
                         <td id="sr-half-price3"></td>
-                        <td id="sr-half-price3"></td>
+                        <td id="sr-full-price3"></td>
                         <td id="sw-half-price3"></td>
                         <td id="sw-full-price3"></td>
                     </tr>
@@ -99,14 +95,9 @@
                 </div>
                 <div id="info2"></div>
                 <table>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th>RESERVATION</th>
-                        <th>WALK-IN</th>
-                    </tr>
+                    <tr class="top">
+                        <th colspan="4">RESERVATION</th>
+                        <th colspan="2">WALK-IN</th>
                     <tr>
                     <th>RENTAL TYPE</th>
                     <th>MAX. PERSONS</th>
@@ -134,14 +125,9 @@
                 </div>
                 <div id="info"></div>
                 <table>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th>RESERVATION</th>
-                        <th>WALK-IN</th>
-                    </tr>
+                    <tr class="top">
+                        <th colspan="4">RESERVATION</th>
+                        <th colspan="2">WALK-IN</th>
                     <tr>
                     <th>RENTAL TYPE</th>
                     <th>MAX. PERSONS</th>
@@ -162,7 +148,7 @@
                         <td id="jeep2"></td>
                         <td id="jmax2"></td>
                         <td id="jr-half-price2"></td>
-                        <td id="jr-half-price2"></td>
+                        <td id="jr-full-price2"></td>
                         <td id="jw-half-price2"></td>
                         <td id="jw-full-price2"></td>
                     </tr>
