--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -91,7 +91,7 @@
                     <h3>Current Weather</span></h3>
                     <img id="c-icon" src="#" alt="c-icon" width="50">
                     <p>Description: <span id="c-description"></span>%</p>
-                    <p>Humidity: <span id="c-humidity"></span>%</p>
+                    <p class="stats">Humidity: <span id="c-humidity"></span>%</p>
                     <p>Temp: <span id="c-temp"></span>°F</p>
                 </div>
                 <div id="forecast">
