added css to rentals page

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -38,16 +38,16 @@
             </ul>
         </nav>
         <main>
-            <h2 class="title">RENTALS</h2>
-            <h3>HONDA SCOOTER</h3>
-            <div>
-                <div id="option1">
+            <h2 class="title">RENTAL PRICES</h2>
+            <div id="rental1">
                 <picture id="img1">
-                    <img src="images/r-scooter" width="200" alt="scooter">
+                    <img src="images/r-scooter3.jpeg" width="200" alt="scooter">
                 </picture>
-                </div>
-                <div id="info"></div>
+                <div id="info1"></div>
                 <table>
+                    <tr>
+                        <th class="rentaltype" colspan="6">HONDA SCOOTER</th>
+                    <tr>
                     <tr class="top">
                         <th colspan="4">RESERVATION</th>
                         <th colspan="2">WALK-IN</th>
@@ -86,15 +86,15 @@
                     </tr>
                 </table>
             </div>
-            <h3>HONDA PIONEER ATV</h3>
-            <div>
-                <div id="option2">
+            <div id="rental2">
                 <picture id="img2">
-                    <img src="#" width="200" alt="ATV">
+                    <img src="images/r-atv.jpg" width="200" alt="ATV">
                 </picture>
-                </div>
                 <div id="info2"></div>
                 <table>
+                    <tr>
+                        <th class="rentaltype" colspan="6">ATV</th>
+                    <tr>
                     <tr class="top">
                         <th colspan="4">RESERVATION</th>
                         <th colspan="2">WALK-IN</th>
@@ -116,15 +116,15 @@
                     </tr>
                 </table>
             </div>
-            <h3>JEEP</h3>
-            <div>
-                <div id="option3">
+            <div id="rental3">
                 <picture id="img3">
-                    <img src="#" width="200" alt="jeep">
+                    <img src="images/r-jeep.jpeg" width="200" alt="jeep">
                 </picture>
-                </div>
-                <div id="info"></div>
+                <div id="info3"></div>
                 <table>
+                    <tr>
+                        <th class="rentaltype" colspan="6">JEEP</th>
+                    <tr>
                     <tr class="top">
                         <th colspan="4">RESERVATION</th>
                         <th colspan="2">WALK-IN</th>
