added button to home page

--- a/scoots/scoots.html
+++ b/scoots/scoots.html
@@ -72,19 +72,12 @@
                     <p>Honda Metropolitan (49cc)—1 person</p>
                     <p>Honda Dio (110cc)—2 person</p>
                     <p>Honda PCX150 (149cc)—2 person</p>
-                </section>  
-                    <!-- <picture id="rental-img3">
-                            <source id="jeep-large" srcset="images/jeep400.jpeg" media="(min-width: 400px)" alt="jeep-large">
-                        <img id="jeep-small"  src="images/jeep.png" alt="jeep-small">
-                    </picture>
-                    <section id="rental-info3">
-                        <h2>Jeep Rentals</h2>
-                        <p>4-door Jeep Wrangler—manual with A/C—5 people max</p>
-                        <p>2-door Jeep Wrangler—open air—manual—4 people max</p>
-                    </section>  
-                </div> -->
+                </section> 
+                </div>
             </div>
-            </div>
+            <form  action="reservations.html">
+                <input id="button" type="submit" value="Start a Reservation" />
+            </form>
             <h2 class="weather-heading">Weather in Cozumel</h2>
             <div class="weather-div">
                 <div id="current-weather-div">
