--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -83,7 +83,7 @@
                     </textarea>
                 </fieldset>
                 <div class="agreement">
-                    <h2>Agreement Form</h2>
+                    <h2>Scoots Reservation Agreement</h2>
         
                     <p>These terms and conditions outline the rules and regulations for the use of SCOOTs's Website, located at https://github.com/Dianauguerra/Dianauguerra.github.io/blob/master/scoots/scoots.html.</p>
         
@@ -176,7 +176,7 @@
                 <fieldset>       
                     <label for="tac">
                         <input id="tac" type="checkbox" name="terms-and-conditions" required>
-                        I agree to the <a href="agreement.html">Terms of the Agreement</a>
+                        I agree to the Terms of the Scoots Reservation Agreement</a>
                       </label>
                 </fieldset>
                 <input type="submit" value="Complete Reservation" class="submitBtn">
